<resources>
    <string name="app_name">CalC</string>
    <string name="add">ADD</string>
    <string name="subtract">SUBTRACT</string>
    <string name="multiply">Multiply</string>
    <string name="divide">DIVIDE</string>
    <string name="reset">Reset</string>
    <string name="digits">0123456789.</string>
    <string name="detail_heading">Web Page Detail</string>
    <string name="list_heading">Web Page Listing</string>
</resources>